# pointcloud-cli

./: Cargo.toml  report.json  test_cloud.xyz  test_cloud_fixed.ply  test_converted.ply  test_pipeline.yaml
output/: aligned_precision.xyz  aligned_test.ply  aligned_test.xyz  test_cloud_step0_filtered.ply  test_cloud_step1_downsampled.ply  test_cloud_step2_normals.ply  test_cloud_step2_normals_fixed.ply  test_cloud_step2_normals_fixed_fixed.ply  transform.txt
src/: config.rs  error.rs  io.rs  lib.rs  main.rs  measurement.rs  mesh_processing.rs  normals.rs  pipeline.rs  preprocess.rs  quality.rs  reconstruction.rs  registration.rs  report.rs  segmentation.rs  types.rs  utils.rs
