[package]
name = "pointcloud-cli"
version = "0.1.0"
edition = "2021"
description = "点云数据处理与三维表面重建命令行Pipeline工具"
authors = ["PointCloud Pipeline Team"]
repository = ""
license = "MIT"

[[bin]]
name = "pointcloud-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0"
indicatif = "0.17"
rayon = "1.10"
byteorder = "1.5"
log = "0.4"
env_logger = "0.11"
num-traits = "0.2"
uuid = { version = "1.0", features = ["serde"] }
crossbeam = "0.8"
smallvec = "1.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
